[tool.poetry]
name = "quicktemplate"
version = "1.0.0"
description = ""
authors = ["Michael Verdegaal"]
readme = "README.md"
packages = [{include = "main"}]


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pre-commit = "^3.7.1"
jupyterlab = "^4.2.0"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
notebook = "^7.1.3"
scikit-learn = "^1.4.2"
pymde = "^0.1.18"
pandas = "^2.2.2"
seaborn = "^0.13.2"
umap-learn = "^0.5.6"
matplotlib = "^3.8.4"
datashader = "^0.16.1"
bokeh = "^3.4.1"
holoviews = "^1.18.3"

[tool.black]
line-length = 100
extend-exclude = '/^[^.]+$|\.(?!(py)$)([^.]+$)/'

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
